ui: fix styles in dropdowns, smoothing input (#4419)
The Time Series settings panel uses dropdowns and text
input fields. This fixes 2 issues:
- When the dropdown is focused, there is no visual indication
- In Firefox, the smoothing input flows offscreen

--- a/tensorboard/webapp/metrics/views/right_pane/settings_view_component.scss
+++ b/tensorboard/webapp/metrics/views/right_pane/settings_view_component.scss
@@ -62,6 +62,13 @@ section .control-row:not(:last-child) {
   }
 }
 
+.scalars-smoothing .slider-input {
+  flex: none;
+  // Wide enough to show 3 digits after a decimal. Required since Firefox does
+  // not shrink input fields smaller than some intrinsic size.
+  width: 5em;
+}
+
 mat-slider {
   flex: 1;
   // Reset mat-slider's internal extra space on left/right sides
